# unit-test-template

./: .gitignore  .gitlint  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  gitlint.yml
algorithm/: CMakeLists.txt
algorithm/motion_damper/: motion_damper.h
algorithm/sensor_safety/: CMakeLists.txt  sensor.c  sensor_safety_unittest.cpp
algorithm/shoelace/: CMakeLists.txt  README.md
algorithm/shoelace/test/: shoelace_unittest.cpp
algorithm/sort/: CMakeLists.txt
algorithm/sort/merge_sort/: CMakeLists.txt
algorithm/sort/merge_sort/include/merge_sort/: merge_sort.hpp
algorithm/sort/merge_sort/test/: merge_sort_unittest.cpp
algorithm/sort/quick_sort/: CMakeLists.txt
algorithm/sort/quick_sort/include/quick_sort/: quick_sort.hpp
algorithm/sort/quick_sort/test/: quick_sort_unittest.cpp
calculation/: CMakeLists.txt
calculation/arctangent/: CMakeLists.txt
calculation/arctangent/test/: arctangent_unittest.cpp
calculation/runge-kutta/: CMakeLists.txt
calculation/runge-kutta/include/RungeKutta/: RungeKutta.h
calculation/runge-kutta/src/: RungeKutta.c
calculation/runge-kutta/test/: RungeKuttaTest.cpp
data_structure/: CMakeLists.txt
data_structure/union/: CMakeLists.txt
data_structure/union/include/union/: union.h
design_pattern/: CMakeLists.txt
design_pattern/behavioral_pattern/: CMakeLists.txt
design_pattern/behavioral_pattern/mediator/: CMakeLists.txt
design_pattern/behavioral_pattern/mediator/ui_mediator/: CMakeLists.txt
design_pattern/behavioral_pattern/mediator/ui_mediator/src/: ui_mediator.cpp
design_pattern/behavioral_pattern/mediator/ui_mediator/test/: ui_mediator_unittest.cpp
design_pattern/behavioral_pattern/observer/: main.cpp
design_pattern/behavioral_pattern/observer/person/: CMakeLists.txt
design_pattern/behavioral_pattern/observer/person/include/person/: person.hpp
design_pattern/behavioral_pattern/observer/person/test/: person_unittest.cpp
design_pattern/creational_pattern/: CMakeLists.txt
design_pattern/creational_pattern/builder/: CMakeLists.txt
design_pattern/creational_pattern/builder/html/: CMakeLists.txt
design_pattern/creational_pattern/builder/html/test/: html_unittest.cpp
design_pattern/structural_pattern/adapter/: CMakeLists.txt
design_pattern/structural_pattern/adapter/Robot/: CMakeLists.txt  README.md
design_pattern/structural_pattern/adapter/Robot/common/: CMakeLists.txt
example/: example.cpp
messaging/: CMakeLists.txt
multi_threading/: CMakeLists.txt
multi_threading/async/: CMakeLists.txt
multi_threading/async/test/: async_unittest.cpp
multi_threading/condition_variable/: CMakeLists.txt
multi_threading/condition_variable/include/condition_variable/: condition_variable.hpp
multi_threading/condition_variable/test/: condition_variable_unittest.cpp
samples/: CMakeLists.txt
samples/messaging/: message.h
technique/: CMakeLists.txt
technique/callback_wrapper/: CMakeLists.txt
technique/callback_wrapper/include/callback_wrapper/: callback_wrapper.hpp
technique/callback_wrapper/test/: callback_wrapper_unittest.cpp
technique/constexpr_for/: CMakeLists.txt
technique/constexpr_for/include/constexpr_for/: constexpr_for.hpp
technique/constexpr_for/test/: constexpr_for_unittest.cpp
technique/crtp/: CMakeLists.txt
technique/crtp/include/crtp/: ctrp.hpp
technique/crtp/test/: crtp_unittest.cpp
technique/double_dispatch/: CMakeLists.txt
technique/double_dispatch/include/double_dispatch/: double_dispatch.hpp
technique/double_dispatch/test/: double_dispatch_unittest.cpp
technique/dynamic_cast/: CMakeLists.txt
technique/dynamic_cast/include/: dog.hpp  lion.hpp
technique/dynamic_cast/include/abstract/: animal.hpp  pet.hpp
technique/dynamic_cast/test/: dynamic_cast_unittest.cpp
technique/pimpl/: CMakeLists.txt
technique/pimpl/include/car/: car.h
technique/pimpl/src/: car.cpp  car_impl.cpp
technique/pimpl/test/: pimpl_unittest.cpp
technique/template_metaprogramming/: CMakeLists.txt
technique/template_metaprogramming/include/function_traits/: function_traits.hpp
technique/template_metaprogramming/include/mixins/: mixins.hpp
technique/template_metaprogramming/include/variadic_overloading/: variadic_overloading.hpp
technique/template_metaprogramming/test/: function_traits_unittest.cpp  mixins_unittest.cpp  variadic_overloading_unittest.cpp
technique/type_erasure/: CMakeLists.txt
technique/type_erasure/include/type_erasure/: object_wrapper.hpp
technique/type_erasure/test/: object_wrapper_unittest.cpp
template/: CMakeLists.txt
template/grid/: CMakeLists.txt
template/grid/test/: grid_unittest.cpp
template/method_templates/grid/: CMakeLists.txt
template/method_templates/grid/include/grid/: grid.hpp
template/method_templates/grid/test/: grid_method_template_unittest.cpp
template/template_grid/grid/test/: grid_unittest.cpp
template/template_parameters/: CMakeLists.txt
template/template_parameters/default_type/grid/: CMakeLists.txt
template/template_parameters/default_type/grid/include/grid/: grid.hpp
template/template_parameters/default_type/grid/test/: default_value_template_unittest.cpp
template/template_parameters/non-type/: CMakeLists.txt
template/template_parameters/non-type/grid/: CMakeLists.txt
tests/: CMakeLists.txt
tests/unittest/: CMakeLists.txt
tests/unittest/algorithm/: CMakeLists.txt
tests/unittest/algorithm/motion_damper/: CMakeLists.txt  motion_damper.c  motion_damper_unittest.cpp
tests/unittest/algorithm/sensor_safety/: CMakeLists.txt  sensor.c  sensor.h  sensor_safety_unittest.cpp
tests/unittest/data_structure/union/: CMakeLists.txt
tests/unittest/design_pattern/: CMakeLists.txt
tests/unittest/design_pattern/singleton_design/VersionEnquiryManager/: CMakeLists.txt
tests/unittest/design_pattern/singleton_design/VersionEnquiryManager/test/: VersionEnquiryManagerTest.cpp
tests/unittest/example/: CMakeLists.txt  example.cpp  example.hpp  example_unittest.cpp
tests/unittest/messaging/: CMakeLists.txt  message.h  messaging.c  messaging.h  messaging_unittest.cpp
(+21 files in other folders)
